<resources>
    <string name="app_name">EFriendly</string>
    <string name="loginTitle">Login</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="passWord">Password</string>
    <string name="passConfirm">Confirm password</string>
    <string name="forgotPass">Don\'t remember password? <u>Recover it</u></string>
    <string name="loginHint">Press here to login</string>
    <string name="signUpHint">Press here to sign up</string>
    <string name="haveAccount">Already have an account? <u>Log in</u></string>
    <string name="dontHaveAccount">Don\'t have account? <u>Create one</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="SearchBar">Search</string>
    <string name="clothesDes">Black plain t-shirt \n 50.000d</string>
    <string name="Notifications">Notifications</string>
    <string name="Chat">Chat</string>
    <string name="Cart">Cart</string>
    <string name="SellerTitle">Seller:</string>
    <string name="All">All</string>
    <string name="TotalPayment">Total payment:</string>
    <string name="Delete">Delete</string>
    <string name="Buy">Buy</string>
    <string name="legit">Legit</string>
    <string name="size">Size</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="payment">Payment</string>
    <string name="editProfile">Edit Profile</string>
    <string name="email2">Email:</string>
    <string name="phone2">Phone number:</string>
    <string name="address2">Address:</string>
    <string name="itemsTotal">Items total:</string>
    <string name="total">Total:</string>
    <string name="money">$0</string>
    <string name="logout">LOGOUT</string>
    <string name="checkout">CHECK OUT</string>
    <string name="splashText">Wish you have the best experience when using the application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newpostHint">Sell your old clothes to protect environment!!</string>
    <string name="detail"><b><font size="35">Detail</font></b></string>
    <string name="Like"><font color="#FFFFFF">Like</font></string>
    <string name="CreatePost"><font color="#000000"><b>Create Post</b></font></string>
    <string name="post">post</string>
    <string name="PhotoView"><font color="#000000">Photo/View (required)</font></string>
    <string name="location"><font color="#000000">Location</font></string>
    <string name="caption">Caption(required)</string>
    <string name="prices">Price(required)</string>
    <string name="hintCategory"> Select category</string>
    <string name="addToCart">Add to cart</string>
    <string name="Contact">Contact</string>
    <string name="Category">Category</string>
    <string name="moneyInput">How much money do you want to deposit?</string>
    <string name="Deposit">Deposit</string>
    <string name="defaultMoney">00000000đ</string>
</resources>