<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ProfileActivity">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/top_background"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/profile_top_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userAvatar"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:src="@drawable/user"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="4dp"
                        app:layout_constraintBottom_toBottomOf="@id/view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/top_background"
                        app:layout_constraintTop_toTopOf="@id/view"
                        app:layout_constraintVertical_bias="0.25"/>

                    <TextView
                        android:id="@+id/txtUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Truong Trong Khanh"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/userAvatar"/>

                    <RatingBar
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:rating="3.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtUsername"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="365dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_background"
                        android:orientation="vertical"
                        android:elevation="3dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rating">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/gray_background"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_margin="12dp"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/oval_background">

                                    <ImageView
                                        android:id="@+id/payment_icon"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/wallet"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/txtPayment"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/payment"
                                    android:textAlignment="center"
                                    android:textSize="13sp" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                android:background="@drawable/gray_background"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_margin="12dp"
                                    android:layout_gravity="center_horizontal"
                                    android:background="@drawable/oval_background">

                                    <ImageView
                                        android:id="@+id/editProfile_icon"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/settings"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />
                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/txtEditProFile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:text="@string/editProfile"
                                    android:textAlignment="center"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/email2"
                                android:textColor="@color/green"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="truongtrongkhanhcm@gmail.com"
                                android:textColor="#5B5B5B"
                                android:textSize="16sp"
                                android:textAlignment="textEnd"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#d9d9d9"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="6dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/phone2"
                                android:textColor="@color/green"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="0888888888"
                                android:textColor="#5B5B5B"
                                android:textSize="16sp"
                                android:textAlignment="textEnd"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#d9d9d9"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="6dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/address2"
                                android:textColor="@color/green"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Quan 8 TPHCM"
                                android:textColor="#5B5B5B"
                                android:textSize="16sp"
                                android:textAlignment="textEnd"/>
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#d9d9d9"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="6dp"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@drawable/button_background"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_margin="20dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>